--- a/proj/src/home.scss
+++ b/proj/src/home.scss
@@ -28,6 +28,7 @@ body {
     letter-spacing: 2px;
     float: left;
     position: fixed;
+    top: 0;
     width: 100%;
     padding-right: 20px;
 
@@ -40,6 +41,7 @@ body {
         font-size: 17px;
         border-radius: $border-rad5;
         margin-left: 10px;
+        margin-top: 10px;
     }
 
     & a:hover {
@@ -78,8 +80,9 @@ body {
 
 .subtitle {
     font-family: $main-font;
+    text-align: left;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 21px;
     line-height: 40px;
     position: absolute;
@@ -104,12 +107,13 @@ body {
     font-family: $main-font;
     font-size: 20px;
     letter-spacing: 2px;
+    cursor: pointer;
 
     &:hover {
         background-color: $white;
         border-color: none;
         color: $orange;
-        font-weight: 800;
+        font-weight: 500;
     }
 }
 
