--- a/proj/src/products.css
+++ b/proj/src/products.css
@@ -107,12 +107,59 @@ body, html {
 
 #menu {
   font-family: "Poppins";
+  
   color: black;
   position: absolute;
-  left: 118px;
-  top: 1012px;
+  /* left: 118px;
+  top: 1012px; */
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
   line-height: 75px;
-}/*# sourceMappingURL=products.css.map */
+  margin-top: 50px;
+  margin-left: 150px;
+ 
+}
+
+#cards {
+ width: 350px;
+ height: 400px;
+ border-radius: 15px;
+
+  background-color: #f5f2f2;
+  background-position: center;
+  margin-top: 200px;
+  margin-left: 150px;
+  background-image: url("../src/assets/products/croissant.png");
+  background-size: 300px;
+  background-repeat: no-repeat; 
+  position: relative;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+
+#name {
+
+  font-family: "Poppins";
+  color: black;
+  width: 350px;
+  height: 100px;
+  position: absolute;
+  padding-bottom: 30px;
+    bottom: 0;
+    text-align: center;
+    font-size: 20px;
+   
+  
+}
+
+#product-name{
+  padding-bottom: 0%;
+}
+#price {
+  padding-bottom: 15px;
+}
+
+
+
+/*# sourceMappingURL=products.css.map */
